--- a/index.html
+++ b/index.html
@@ -165,13 +165,7 @@ SPDX-License-Identifier: Apache-2.0
                     What's Popular
                 </h1>
                 <!-- backend doesn't support pages greater than 500-->
-                <div class="col-md-3 item" *ngFor="let movie of allMovies
-            | paginate
-            : {
-                itemsPerPage:itemsPerPage,
-                currentPage: page,
-                totalItems: 499
-              }; let i = index;" id="item{{i}}" tabindex="0">
+                <div class="col-md-3 item" tabindex="0">
                     <div class=" card h-100 text-center">
                         <img src="{{'https://image.tmdb.org/t/p/w220_and_h330_face/' + movie['poster_path']}}"
                              class="card-img-top"
@@ -183,14 +177,11 @@ SPDX-License-Identifier: Apache-2.0
                             <strong> {{movie['release_date']}}</strong>
                         </div>
                         <div class="card-footer">
-                            <a routerLink="film/{{movie['id']}}" class=" btn btn-primary d-block">View Film</a>
+                            <a href="film/{{movie['id']}}" class=" btn btn-primary d-block">View Film</a>
                         </div>
                     </div>
 
                 </div>
-                <p class="section-pages">
-                    <pagination-controls class="pagi" (pageChange)="pageChangeEvent($event)"></pagination-controls>
-                </p>
             </div>
         </div>
     </div>
@@ -216,12 +207,30 @@ SPDX-License-Identifier: Apache-2.0
 
 <script>
     let movie = [];
-    fetch('https://jsonplaceholder.typicode.com/users')
-        .then(response => response.json())
+    let errorMessage = '';
+    let loading = false;
+    fetch('sshttps://api.themoviedb.org/3/movie/popular?api_key=8ca7086260d6440956c15917b02b2ef1&language=en-US')
+        .then(response => {
+            console.log(response, `response`)
+            if (response && response.status !== 200) {
+                loading = true;
+            }
+            return response.json();
+        })
         .then(res => {
-            movie = res;
-            console.log(res)
-            console.log(movie,`movie`)
+            if (!loading) {
+                movie = res && res['results'];
+                console.log(res)
+                setTimeout(() => {
+                    console.log('time excute');
+                    console.log(movie, `movie`)
+                }, 5000)
+                console.log(movie, `after excuate time >> log >> movie`)
+            }
+        })
+        .catch(err => {
+            errorMessage = err;
+            console.log(err, `error`)
         })
 </script>
 </body>
