--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@ SPDX-License-Identifier: Apache-2.0
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous">
     </script>
+    <script src="./lib/spatial_navigation.js"></script>
+    <script src="./js/index.js"></script>
 </head>
 
 <body>
@@ -108,108 +110,74 @@ SPDX-License-Identifier: Apache-2.0
 
 
 <!-- start of  HomePage -->
-<section id="home">
-    <div class="">
-        <div
-                style="background-image: url('cover.jpg')"
-                class="bg">
-            <div class="overlay">
-                <div class="container">
-                    <div class="row content">
-                        <div class="col-sm-12">
-                            <div class="movie-thumb">
-                                <h1 class="welcome">
-                                    Welcome.
-                                </h1>
-                                <h3 class="description">
-                                    Millions of movies, TV shows and people to discover. Explore now.
-                                </h3>
-                                <h2 class="title text-center">
-                                    <form [formGroup]="form" (ngSubmit)="onSubmit()" class="input">
+<div class="">
+    <div style="background-image: url('cover.jpg')"
+         class="bg">
+        <div class="overlay">
+            <div class="container">
+                <div class="row content">
+                    <div class="col-sm-12">
+                        <div class="movie-thumb">
+                            <h1 class="welcome">
+                                Welcome.
+                            </h1>
+                            <h3 class="description">
+                                Millions of movies, TV shows and people to discover. Explore now.
+                            </h3>
+                            <h2 class="title text-center">
+                                <form [formGroup]="form" (ngSubmit)="onSubmit()" class="input">
 
-                                        <div class="container row">
-                                            <div class="col-sm-12">
-                                                <input
-                                                        id="name"
-                                                        formControlName="name"
-                                                        placeholder="Search for a movie, tv show, person......"
-                                                        type="search"
-                                                        class="input-search"
-                                                />
-                                                <button class="button-search" type="submit">Search</button>
-                                            </div>
-                                            <div class="col-sm-4"></div>
-                                            <div class="col-sm-4">
-                                            </div>
-                                            <div class="col-sm-4"></div>
+                                    <div class="container row">
+                                        <div class="col-sm-12">
+                                            <input
+                                                    id="name"
+                                                    formControlName="name"
+                                                    placeholder="Search for a movie, tv show, person......"
+                                                    type="search"
+                                                    class="input-search"
+                                            />
+                                            <button class="button-search" type="submit">Search</button>
                                         </div>
-                                    </form>
-                                </h2>
-                            </div>
+                                        <div class="col-sm-4"></div>
+                                        <div class="col-sm-4">
+                                        </div>
+                                        <div class="col-sm-4"></div>
+                                    </div>
+                                </form>
+                            </h2>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div *ngIf="form.get('name')?.invalid && (form.get('name')?.dirty || form.get('name')?.touched)"
-             class="container alert alert-danger text-center">
-            <div *ngIf="form.get('name')?.errors?.['required']">Field is required.</div>
-        </div>
-
+    </div>
+    <div *ngIf="form.get('name')?.invalid && (form.get('name')?.dirty || form.get('name')?.touched)"
+         class="container alert alert-danger text-center">
+        <div *ngIf="form.get('name')?.errors?.['required']">Field is required.</div>
     </div>
 
-    <div class="collection-film d-block" (activate)="onActivate($event)" *ngIf="loading">
-        <div class="container center me-auto">
-            <div class="row">
-                <h1>
-                    What's Popular
-                </h1>
-                <!-- backend doesn't support pages greater than 500-->
-                <div class="col-md-3 item" tabindex="0">
-                    <div class=" card h-100 text-center">
-                        <img src="{{'https://image.tmdb.org/t/p/w220_and_h330_face/' + movie['poster_path']}}"
-                             class="card-img-top"
-                             alt="{{'https://image.tmdb.org/t/p/w220_and_h330_face/' + movie['poster_path']}}">
-                        <div class="card-body">
-                            <strong class="card-title">{{movie['title']}}</strong>
-                            <strong class="card-text">{{movie['original_language'] //noinspection
-                                UnresolvedVariable}}</strong>
-                            <strong> {{movie['release_date']}}</strong>
-                        </div>
-                        <div class="card-footer">
-                            <a href="film/{{movie['id']}}" class=" btn btn-primary d-block">View Film</a>
-                        </div>
-                    </div>
+</div>
 
-                </div>
-            </div>
+<div class="collection-film d-block" (activate)="onActivate($event)">
+    <div class="container center me-auto">
+        <div class="row">
+            <h1>
+                What's Popular
+            </h1>
+            <!-- backend doesn't support pages greater than 500-->
+            <div class="row" id="articleContainer"></div>
         </div>
     </div>
-    <div *ngIf="!loading" class="error">
-        <h1 class="error-message text-center"> {{errorMessage && errorMessage['status']}}</h1>
-        <h2 class="text-center error-message">
-            {{errorMessage && errorMessage['error'] && errorMessage['error']['status_message']}}
-        </h2>
-    </div>
-    <!-- end of  HomePage -->
+</div>
 
-
-</section>
-<section id="about">
-    <h1>About</h1>
-    <p>This is a tiny SPA</p>
-</section>
-<section id="contact">
-    <h1>Contact</h1>
-    <p>Contact page</p>
-</section>
+<!-- end of  HomePage -->
 
 
 <script>
     let movie = [];
     let errorMessage = '';
     let loading = false;
-    fetch('sshttps://api.themoviedb.org/3/movie/popular?api_key=8ca7086260d6440956c15917b02b2ef1&language=en-US')
+    fetch('https://api.themoviedb.org/3/movie/popular?api_key=8ca7086260d6440956c15917b02b2ef1&language=en-US')
         .then(response => {
             console.log(response, `response`)
             if (response && response.status !== 200) {
@@ -218,13 +186,34 @@ SPDX-License-Identifier: Apache-2.0
             return response.json();
         })
         .then(res => {
+            let container = document.querySelector('#articleContainer');
+            let strArticles = "";
             if (!loading) {
                 movie = res && res['results'];
                 console.log(res)
+
                 setTimeout(() => {
-                    console.log('time excute');
-                    console.log(movie, `movie`)
-                }, 5000)
+
+                    movie.forEach((item, id) => {
+                        console.log(id, `id`)
+                        strArticles +=
+                            '<div class="item col-md-3" id="item ' + id + ' "  tabindex="0">' +
+                            '<div class=" h-100 text-center">' +
+                            '<img style="width: 302px; height: 453px" class="card-img-top" src=" https://image.tmdb.org/t/p/w220_and_h330_face/' + item.backdrop_path + '" height="100%" width="100%">' +
+                            '<div class="card-body">' +
+                            '<strong class="card-title">' + item.title + ' </strong>' +
+                            '<strong class="card-text">' + item.original_language + '</strong>' +
+                            '</div>' +
+                            '<div class="card-footer">' +
+                            '<a href="film/442/xx" class=" btn btn-primary d-block">VIEW FILM</a>' +
+                            '</div>' +
+                            '</div>' +
+                            '</div>';
+
+                    })
+                    container.innerHTML = strArticles;
+
+                }, 2000)
                 console.log(movie, `after excuate time >> log >> movie`)
             }
         })
@@ -233,6 +222,73 @@ SPDX-License-Identifier: Apache-2.0
             console.log(err, `error`)
         })
 </script>
+<div>
+
+    <footer style="display: block">
+        <div class="footer-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-2">
+                        <div class="copy-right">
+                            <img src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_square_2-d537fb228cf3ded904ef09b136fe3fec72548ebc1fea3fbbd1ad9e36364db38b.svg"
+                                 alt="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_square_2-d537fb228cf3ded904ef09b136fe3fec72548ebc1fea3fbbd1ad9e36364db38b.svg"/>
+                            <button class="join-comuntiy text-info">
+                                Join the Community
+                            </button>
+                        </div>
+                    </div>
+                    <div class="col-sm">
+                        <div class="copy-right">
+                            <h5> THE BASICS </h5>
+                            <ul>
+                                <li>About TMDB</li>
+                                <li>Contact Us</li>
+                                <li>Support Forums</li>
+                                <li>API</li>
+                                <li>System Status</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-sm">
+                        <div class="copy-right">
+                            <h5> GET INVOLVED </h5>
+
+                            <ul>
+                                <li>Contribution Bible</li>
+                                <li>Add New Movie</li>
+                                <li>Add New TV Show</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-sm">
+                        <div class="copy-right">
+                            <h5>COMMUNITY </h5>
+
+                            <ul>
+                                <li>Guidelines</li>
+                                <li>Discussions</li>
+                                <li>Leaderboard</li>
+                                <li>Twitter</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-sm">
+                        <div class="copy-right">
+                            <h5>LEGAL</h5>
+                            <ul>
+                                <li>Terms of Use</li>
+                                <li>API Terms of Use</li>
+                                <li>Privacy Policy</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+</div>
+
+
 </body>
 
 </html>
